2004-08-13  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix memory leak in the new "state stack thingie".
	* rsvg.c: Use a GMemChunk to (marginally) speed up state allocation
	
2004-08-13  Caleb Moore <c.moore@student.unsw.edu.au>

	* prettymuch-everywhere: Huge number of small bugfixes
	* rsvg-styles.c: rewrote the whole state stack thingie

2004-07-23  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-mask.c: ClipPaths now partially working
	* rsvg-shapes.c: now keep a copy of everything in defs.
	* rsvg-styles.c: don't push discrete layers while in defs.
	
2004-07-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: Bilinear interpolation for images

2004-07-19  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: better scroll policy, especially when used as a plugin
	
2004-07-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number (2.7.4)
	* rsvg.1: Add stuff to the man page
	* NEWS: Document newer developments
	
2004-07-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made lighting work much better
	* rsvg-shapes.c: quit passing the gerror pointer to the image loader. It works better now with VFS now, I have no idea why though

2004-07-18  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made feImage work better, now it transforms it better.
	* rsvg-shapes.c: fixed filters on images and bounding boxes on images

2004-07-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.[ch]: Bug #147662
	
2004-07-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: rewrote some of the image code so it transforms the image correctly, pitty about loosing bilinear filtering, but we can get that back I suppose
	
2004-07-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-styles.c, rsvg-private.h: Made it remember how bit the vboxes of discrete layers are for alpha optimisations and better filter positioning

2004-07-12  Dom Lachowicz <cinamod@hotmail.com>
